// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HomeComponent /> container render property - isLogged: false 1`] = `
<Fragment>
  <Connect(LoginFormComponent) />
</Fragment>
`;

exports[`<HomeComponent /> container render property - isLogged: true 1`] = `
<Fragment>
  <Connect(DashboardContainer) />
</Fragment>
`;
